--- a/home.html
+++ b/home.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<meta charset="uft-8">
+		<title>Ali Finkelstein</title>
+		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/home.css">
+	</head>
 
-<meta charset="uft-8">
-<title>Ali Finkelstein</title>
-<body>
+	<body>
 
+		<header>
+			<h1> Ali Finkelstein</h1>
+			<nav>
+				<p>Home</p>
+				<p>Code</p>
+				<p>Design</p>
+				<p>Github</p>
+				<p>Email</p>
+			</nav>
+		</header>
+  
+  		<section>
+  		</section>
 
-</body>
+  		<footer>
+  		</footer>
+
+  	</body>
 
 </html>
