added assets for projects page

--- a/code.html
+++ b/code.html
@@ -13,10 +13,9 @@
 			<h1 id="logo"> Ali Finkelstein</h1>
 			<nav>
 				<ul>
-					<li class="fadeNav">Home</li>
-					<li class="fadeNav">Code</li>
+					<li class="fadeNav"><a href="home.html">Home</a></li>
+					<li class="fadeNav"><a href="code.html"><div id="selected">Code</div></a></li>
 					<li class="fadeNav">Design</li>
-					<li class="fadeNav">Github</li>
 					<li class="fadeNav">Email</li>
 				</ul>	
 			</nav>
