--- a/home.html
+++ b/home.html
@@ -13,16 +13,18 @@
 			<h1 id="logo"> Ali Finkelstein</h1>
 			<nav>
 				<ul>
-					<li class="fadeNav">Home</li>
-					<li class="fadeNav">Code</li>
+					<li class="fadeNav"><a href="home.html"><div id="selected">Home</div></a></li>
+					<li class="fadeNav"><a href="code.html">Code</a></li>
 					<li class="fadeNav">Design</li>
-					<li class="fadeNav">Github</li>
 					<li class="fadeNav">Email</li>
 				</ul>	
 			</nav>
 		</header>
   
   		<section>
+  			Hi I'm Ali. 
+
+  			Connect with me:
   		</section>
 
   		<footer>
