Updated personal site

--- a/home.html
+++ b/home.html
@@ -1,29 +1,35 @@
 
-<!DOCTYPE html>
 <html>
 	<head>
 		<title> Ali Finkelstein </title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link href='http://fonts.googleapis.com/css?family=Lobster|Cabin' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Fira+Sans:300,400|Pacifico' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">
 	</head>
+
 	<body>
 			<header>
 				<div class="hiddenLogo">
 				<h1 id="name">Ali Finkelstein</h1>
-				<h2>Under Construction</h2>
+				<h2> I am a candidate for my Master's of Engineering from MIT, and a recent graduate from MIT with a Bachelor's of Science in computer science and electrical engineering and minor in comparative media studies. This summer, I am working as a software engineering intern on the scaling team at Toast Tab in Boston, MA.  </h2>
+<!-- 				<button type="button" class="btn btn-primary" data-toggle="modal" data-target="moreAboutMeModal">more about me</button>
+				Button trigger modal
+				<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+				Launch demo modal
+				</button> -->
 
-						</header>
+			</header>
 			<section>
 				<nav class="hiddenBottom">
 					<ul>
-						<!--icon credits to: http://www.designrazzi.net/2014/social-media-buttons/ -->
-						<li> <a href="https://github.com/asfink"> 
+						<!--icon credits to: http:n/www.designrazzi.net/2014/social-media-buttons/ -->
+						<li> <a href="https://github.com/asfink" target="_blank"> 
 							<i class="fa fa-github-alt icon-2x"></i> 
 
 <!-- 							<img class="recolor" src="assets/github@2x.png"> -->
 						</a> </li>
-						<li> <a href="https://twitter.com/asafink_">
+						<li> <a href="https://twitter.com/asafink_" target="_blank">
 								<i class="fa fa-twitter icon-2x"></i> 
 
 <!-- 							<img class="recolor" src="assets/twitter@2x.png"> -->
@@ -32,16 +38,31 @@
 							<i class="fa fa-envelope-o icon-2x"></i>
 <!-- 							<img class="recolor" src="assets/mail@2x.png"> -->
 						</a> </li>
-						<li><a href="https://www.linkedin.com/pub/ali-finkelstein/80/50/625"> 
+						<li><a href="https://www.linkedin.com/pub/ali-finkelstein/80/50/625" target="_blank"> 
 							<i class="fa fa-linkedin icon-2x"></i>
 <!-- 							<img class="recolor" src="assets/linked-in@2x.png"> -->
 						</a> </li>
+						<li><a href="https://www.dropbox.com/s/19zznd4oayevbwh/AliFinkelsteinResume.pdf?dl=0" target="_blank">
+							<i class="fa fa-file-excel-o"></i>
+						</a></li>
 					</ul>
 				</nav>
 			</div>
 			</section>
+
+			<!-- <section>
+				<div class="projectInfo">
+					<div class="photo">
+						photo
+					</div>
+					<div class="info">
+						info
+					</div>
+				</div>
+			</section> -->
 			<footer>
 			</footer>
+
 			<script type="text/javascript" src='js/jquery.js'></script>
 			<script type="text/javascript">
 				// $(document).ready(function() {
