update personal site

--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
 			<header>
 				<div class="hiddenLogo">
 				<h1 id="name">Ali Finkelstein</h1>
-				<h2> I am a candidate for my Master's of Engineering from MIT, and a recent graduate from MIT with a Bachelor's of Science in computer science and electrical engineering and minor in comparative media studies. This summer, I am working as a software engineering intern on the scaling team at Toast Tab in Boston, MA.  </h2>
+				<h2> I am a candidate for my Master's of Engineering from MIT, and a recent graduate from MIT with a Bachelor's of Science in computer science and electrical engineering and minor in comparative media studies. This past summer, I  worked as a software engineering intern on the scaling team at Toast Tab in Boston, MA.  </h2>
 <!-- 				<button type="button" class="btn btn-primary" data-toggle="modal" data-target="moreAboutMeModal">more about me</button>
 				Button trigger modal
 				<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
