--- a/home.html
+++ b/home.html
@@ -3,8 +3,8 @@
 	<head>
 		<title> Ali Finkelstein </title>
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<link href='http://fonts.googleapis.com/css?family=Lobster|Cabin' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Fira+Sans:300,400|Pacifico' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+		<link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,700" rel="stylesheet">
 		<link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">
 	</head>
 
@@ -12,7 +12,14 @@
 			<header>
 				<div class="hiddenLogo">
 				<h1 id="name">Ali Finkelstein</h1>
-				<h2> I am a candidate for my Master's of Engineering from MIT, and a recent graduate from MIT with a Bachelor's of Science in computer science and electrical engineering and minor in comparative media studies. This past summer, I  worked as a software engineering intern on the scaling team at Toast Tab in Boston, MA.  </h2>
+				<h2> Full stack engineering looking for her next great adventure. </h2>
+	<h3> 2017 - MIT - Master of Engineering in computer science and electrical engineering</h3>
+						<h4> Concentration in computer systems </h4>
+					</br>
+	 <h3 style="font-weight: 700;"> 2016 - MIT - Bachelor of Science in computer science and electrical engineering </h3>
+						<h4> Minor in comparative media studies </h4>
+
+				<!-- <h4> I studied computer science and electrical engineering at MIT, where I received my Master of Engineering (concentration in computer systems) in 2017 and Bachelor of Science degree with a minor in comparative media studies in 2016.  </h4> -->
 <!-- 				<button type="button" class="btn btn-primary" data-toggle="modal" data-target="moreAboutMeModal">more about me</button>
 				Button trigger modal
 				<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
@@ -42,7 +49,7 @@
 							<i class="fa fa-linkedin icon-2x"></i>
 <!-- 							<img class="recolor" src="assets/linked-in@2x.png"> -->
 						</a> </li>
-						<li><a href="https://www.dropbox.com/s/19zznd4oayevbwh/AliFinkelsteinResume.pdf?dl=0" target="_blank">
+						<li><a href="https://www.dropbox.com/s/6u41h059o37tcc2/resumeContent.pdf?dl=0" target="_blank">
 							<i class="fa fa-file-excel-o"></i>
 						</a></li>
 					</ul>
