--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!-- 
-CREDITS WHERE CREDIT IS DUE:
-Thank you Panagiotis Bitos for publishing the VHS background code on codepen- I used it as the basis for my background :)
-https://codepen.io/pbitos/pen/zypwVr 
-
-
 Thank you David Carr for publishing the Multiline typewriter effect - I used this as the basis for my typewriter animation :)
 https://codepen.io/daviddcarr/pen/XVyQMM
 -->
@@ -13,7 +8,7 @@ https://codepen.io/daviddcarr/pen/XVyQMM
 
 <head>
   <meta charset="UTF-8">
-  <title></title>
+  <title>Ali Finkelstein</title>
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono|Press+Start+2P|VT323&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
