--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ https://codepen.io/daviddcarr/pen/XVyQMM
 <html lang="en" >
 
 <head>
+  
   <meta charset="UTF-8">
   <title>Ali Finkelstein</title>
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono|Press+Start+2P|VT323&display=swap" rel="stylesheet">
@@ -16,6 +17,16 @@ https://codepen.io/daviddcarr/pen/XVyQMM
   <link rel="stylesheet" href="https://unpkg.com/splitting/dist/splitting.css" />
   <link rel="stylesheet" href="https://unpkg.com/splitting/dist/splitting-cells.css" />
   <script src="https://unpkg.com/splitting/dist/splitting.min.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154710519-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-154710519-1');
+  </script>
+
 </head>
 
 <body>
@@ -39,7 +50,7 @@ https://codepen.io/daviddcarr/pen/XVyQMM
       <div id="home___tool-bar-name">
         <div class="home___namebar-fill"></div>
         <div id="home___namebar">
-            Ali Finkelstein
+            <a href="/" style="text-decoration: none; color: inherit;"> Ali Finkelstein</a>
         </div>
         <div class="home___namebar-fill"></div>
         <!-- <div class="home___tool-bar__exit">
@@ -51,9 +62,10 @@ https://codepen.io/daviddcarr/pen/XVyQMM
     <div id="home___tool-bar-tiles">
         <div id="home___tool-bar___entries">
           <a class="home___tool-bar-button" href="https://twitter.com/endingwithali"> <div class="home___tool-bar__entry"><p class="home___tool-bar__entry-text">Twitter</p></div></a>
-          <a class="home___tool-bar-button" href="https://github.com/asfink"><div class="home___tool-bar__entry"><p class="home___tool-bar__entry-text">GitHub</p></div></a>
-          <a class="home___tool-bar-button" href="https://www.producthunt.com/@asafink"><div class="home___tool-bar__entry" ><p class="home___tool-bar__entry-text">Product Hunt</p></div></a>
-          <a class="home___tool-bar-button" href="https://www.linkedin.com/in/ali-finkelstein-62505080/"><div class="home___tool-bar__entry"><p class="home___tool-bar__entry-text">LinkedIn</p></div></a>
+          <a class="home___tool-bar-button" href="https://github.com/endingwithali"><div class="home___tool-bar__entry"><p class="home___tool-bar__entry-text">GitHub</p></div></a>
+          <a class="home___tool-bar-button" href="https://www.producthunt.com/@endingwithali"><div class="home___tool-bar__entry" ><p class="home___tool-bar__entry-text">Product Hunt</p></div></a>
+          <a class="home___tool-bar-button" href="https://www.linkedin.com/in/ali-finkelstein/"><div class="home___tool-bar__entry"><p class="home___tool-bar__entry-text">LinkedIn</p></div></a>
+          <!-- <a class="home___tool-bar-button" href="https://stackoverflow.com/users/1496526/endingwithali"><div class="home___tool-bar__entry"><p class="home___tool-bar__entry-text">Stack Overflow</p></div></a> -->
         </div>
         <!-- <div class="home___tool-bar__exit">
             <svg width="2.5vh" height="2.5vh">
@@ -62,14 +74,13 @@ https://codepen.io/daviddcarr/pen/XVyQMM
         </div>   -->
       </div>
     </div>
-    <div id="home__content">
+    <div class="home__content">
     <div class="home__typewriter">
         <div class="output" id="output">
           <h1 class="cursor" style="margin-top: 0px; margin-bottom:0px;"></h1>
         </div>
         <div id="home___text">
-            <p class="home___mainbox-text">Hi! I'm Ali. I currently live in Miami, looking for my next big adventure. I co-founded ERinfo.me and Hypothetical Capital.</p>
-            <p class="home___mainbox-text">I'm actively looking for a new role, so please reach out!</p>
+            <p class="home___mainbox-text">Hi! I'm Ali. I'm an NYC based Dev Rel, currently working at New Relic. I also stream  hacking, coding, and <a href="https://twitter.com/hacksnax">@HackSnax</a> almost everyday on <a href="https://twitch.tv/endingwithali">Twitch</a>.</p>
             <p class="home___mainbox-text">Best way to contact me is via Twitter DM - let's chat :)</p>
 
           </div>
@@ -78,12 +89,9 @@ https://codepen.io/daviddcarr/pen/XVyQMM
       <img id="home___image" src="assets/self.jpg" alt="A glitched picture of Ali's face">
 
     </div>
-    <div id="home__blog">
-        <div id="home__blog-button">
-            <a class="home___tool-bar-button" href="https://asfink.github.io"> <div class="home___tool-bar__entry"><p class="home___tool-bar__entry-text">I write things sometimes</p></div></a>
-        </div>
-
-      </div>
+    <div id="home__links">
+        <p class="home___link-text"><a href="https://blog.ali.dev">I write things sometimes</a></p>
+        <p class="home___link-text"><a href="/about.html">More about me</a></p>
     </div>
   </div>
   </div>
