--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@ https://codepen.io/daviddcarr/pen/XVyQMM
 <head>
   
   <meta charset="UTF-8">
-  <title>Ali Finkelstein</title>
+  <title>Ali Diamond</title>
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono|Press+Start+2P|VT323&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -33,13 +33,13 @@ https://codepen.io/daviddcarr/pen/XVyQMM
   <!-- <div class="lines"></div>
   <div class="background">
       <div class="noise"></div>
-      <div class="vhs">Ali Finkelstein</div>
+      <div class="vhs">Ali Diamond</div>
       <div class="time"><span id="time"></span></div>
       <div class="counter">REC <label id="minutes">00</label>:<label id="seconds">00</label></div>
   </div> -->
   <div class="main">
   <!-- <h1 id="home___name">
-    Ali Finkelstein
+    Ali Diamond
   </h1>
   <h2 id="home___tagline">
     Co Founder @ ERinfo
@@ -50,7 +50,7 @@ https://codepen.io/daviddcarr/pen/XVyQMM
       <div id="home___tool-bar-name">
         <div class="home___namebar-fill"></div>
         <div id="home___namebar">
-            <a href="/" style="text-decoration: none; color: inherit;"> Ali Finkelstein</a>
+            <a href="/" style="text-decoration: none; color: inherit;"> Ali Diamond</a>
         </div>
         <div class="home___namebar-fill"></div>
         <!-- <div class="home___tool-bar__exit">
@@ -64,7 +64,7 @@ https://codepen.io/daviddcarr/pen/XVyQMM
           <a class="home___tool-bar-button" href="https://twitter.com/endingwithali"> <div class="home___tool-bar__entry"><p class="home___tool-bar__entry-text">Twitter</p></div></a>
           <a class="home___tool-bar-button" href="https://github.com/endingwithali"><div class="home___tool-bar__entry"><p class="home___tool-bar__entry-text">GitHub</p></div></a>
           <a class="home___tool-bar-button" href="https://www.producthunt.com/@asafink"><div class="home___tool-bar__entry" ><p class="home___tool-bar__entry-text">Product Hunt</p></div></a>
-          <a class="home___tool-bar-button" href="https://www.linkedin.com/in/ali-finkelstein-62505080/"><div class="home___tool-bar__entry"><p class="home___tool-bar__entry-text">LinkedIn</p></div></a>
+          <a class="home___tool-bar-button" href="https://www.linkedin.com/in/ali-diamond/"><div class="home___tool-bar__entry"><p class="home___tool-bar__entry-text">LinkedIn</p></div></a>
           <!-- <a class="home___tool-bar-button" href="https://stackoverflow.com/users/1496526/endingwithali"><div class="home___tool-bar__entry"><p class="home___tool-bar__entry-text">Stack Overflow</p></div></a> -->
         </div>
         <!-- <div class="home___tool-bar__exit">
