updating new work

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ https://codepen.io/daviddcarr/pen/XVyQMM
         <div id="home___tool-bar___entries">
           <a class="home___tool-bar-button" href="https://twitter.com/endingwithali"> <div class="home___tool-bar__entry"><p class="home___tool-bar__entry-text">Twitter</p></div></a>
           <a class="home___tool-bar-button" href="https://github.com/endingwithali"><div class="home___tool-bar__entry"><p class="home___tool-bar__entry-text">GitHub</p></div></a>
-          <a class="home___tool-bar-button" href="https://www.producthunt.com/@endingwithali"><div class="home___tool-bar__entry" ><p class="home___tool-bar__entry-text">Product Hunt</p></div></a>
+          <a class="home___tool-bar-button" href="https://www.tiktok.com/@endingwithali"><div class="home___tool-bar__entry" ><p class="home___tool-bar__entry-text">TikTok</p></div></a>
           <a class="home___tool-bar-button" href="https://www.linkedin.com/in/ali-diamond/"><div class="home___tool-bar__entry"><p class="home___tool-bar__entry-text">LinkedIn</p></div></a>
           <!-- <a class="home___tool-bar-button" href="https://stackoverflow.com/users/1496526/endingwithali"><div class="home___tool-bar__entry"><p class="home___tool-bar__entry-text">Stack Overflow</p></div></a> -->
         </div>
@@ -80,7 +80,7 @@ https://codepen.io/daviddcarr/pen/XVyQMM
           <h1 class="cursor" style="margin-top: 0px; margin-bottom:0px;"></h1>
         </div>
         <div id="home___text">
-            <p class="home___mainbox-text">Hi! I'm Ali. I'm an NYC based Dev Rel, currently working at New Relic. I also stream  hacking, coding, and <a href="https://twitter.com/hacksnax">@HackSnax</a> almost everyday on <a href="https://twitch.tv/endingwithali">Twitch</a>.</p>
+            <p class="home___mainbox-text">Hi! I'm Ali. I'm an NYC based Dev Rel, currently working at <a href="https://coder.com">Coder.com</a>. I'm a prolific shitposter having fun on both <a href="https://twitter.com/endingwithali">Twitter</a> and <a href="https://tiktok.com/@endingwithali">TikTok</a>. I also stream hacking, coding, and other tech conten almost everyday on <a href="https://twitch.tv/endingwithali">Twitch</a>.</p>
             <p class="home___mainbox-text">Best way to contact me is via Twitter DM - let's chat :)</p>
 
           </div>
