--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@ https://codepen.io/daviddcarr/pen/XVyQMM
 
 			 <p class="home___mainbox-text">She/Her</p>
 
-			 <p class="home___mainbox-text">Creator of <a href="https://twitter.com/plshirethisdev">plshirethis.dev</a>,  founder of and investor via <a href="http://hypothetical.capital">Hypothetical Capital</a>, LP at <a href="https://www.behindgeniusventures.com/">Behind Genius Ventures</a>, and streaming on <a href="twitch.tv/endingwithali">Twitch</a>.</p>
+			 <p class="home___mainbox-text">Streamer on <a href="https://live.ali.dev">Twitch</a> and LP at <a href="https://www.behindgeniusventures.com/">Behind Genius Ventures</a>.</p>
 
 			 <p class="home___mainbox-text">Right now, I'm spending my free time studying application security, discussing internet phenomena, and growing my creative outlets.... but really I'm probably thinking about dogs. </p>
 
