updating new work

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ https://codepen.io/daviddcarr/pen/XVyQMM
           <h1 class="cursor" style="margin-top: 0px; margin-bottom:0px;"></h1>
         </div>
         <div id="home___text">
-            <p class="home___mainbox-text">Hi! I'm Ali. I'm an NYC based Dev Rel, currently working at <a href="https://coder.com">Coder.com</a>. I'm a prolific shitposter having fun on both <a href="https://twitter.com/endingwithali">Twitter</a> and <a href="https://tiktok.com/@endingwithali">TikTok</a>. I also stream hacking, coding, and other tech conten almost everyday on <a href="https://twitch.tv/endingwithali">Twitch</a>.</p>
+            <p class="home___mainbox-text">Hi! I'm Ali. I'm an NYC based Dev Rel, currently working at <a href="https://coder.com">Coder.com</a>. I'm a prolific shitposter having fun on both <a href="https://twitter.com/endingwithali">Twitter</a> and <a href="https://tiktok.com/@endingwithali">TikTok</a>. I also stream hacking, coding, and other tech content almost everyday on <a href="https://twitch.tv/endingwithali">Twitch</a>.</p>
             <p class="home___mainbox-text">Best way to contact me is via Twitter DM - let's chat :)</p>
 
           </div>
