adding new photo

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ https://codepen.io/daviddcarr/pen/XVyQMM
           </div>
       </div>
     <div id="home___image-holder">
-      <img id="home___image" src="assets/self.jpg" alt="A glitched picture of Ali's face">
+      <img id="home___image" src="assets/CasualAli.jpg" alt="A glitched picture of Ali's face">
 
     </div>
     <div id="home__links">
